Archive2/c6/ed43ff07559d8d/output
main.cpp:4:1: error: expected constructor, destructor, or type conversion before 'char'
 char=c;
 ^
main.cpp:5:1: error: expected unqualified-id before '{' token
 {
 ^
main.cpp:7:3: error: expected unqualified-id before 'while'
 } while( char=c );
   ^
main.cpp:8:1: error: expected unqualified-id before 'if'
 if (char=c) {
 ^
main.cpp:10:3: error: expected unqualified-id before 'else'
 } else {
   ^
