Archive2/c6/ed43ff07559d8d/main.cpp
#include <iostream>
using namespace std ;
main()
char=c;
{
cout << "Entrez une lettre" << endl;
} while( char=c );
if (char=c) {
cout << "Vous avez trouve la bonne lettre" << endl;
} else {
cout << "Perdu "endl;
}